--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Priyam Gupta",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^3.2.0",
+    "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
