--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "multer": "^1.4.4",
     "node-sass": "^7.0.1",
+    "nodemailer": "^6.7.6",
+    "npm": "^8.13.2",
     "passport": "^0.5.2",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
