--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod_start" : "NODE_ENV=production nodemon index.js"
+    "prod_start": "NODE_ENV=production nodemon index.js"
   },
   "author": "Priyam Gupta",
   "license": "ISC",
@@ -17,13 +17,17 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "del": "^6.1.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-rev": "^9.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "node-sass": "^7.0.1",
     "nodemailer": "^6.7.6",
@@ -32,6 +36,13 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "rotating-file-stream": "^3.0.4",
+    "sass": "^1.53.0",
     "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    
+    "gulp-uglify-es": "^3.0.0"
   }
 }
